# webapp-fileuploader

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  app.py  crypto.py  docker-compose.dev.yml  docker-compose.yaml  pyproject.toml  requirements.txt
docs/: UX_UI_GUIDELINES.md
scripts/: generate_secret.sh  migrate_clipboard_ulid.py
src/clipdrop/: __init__.py  __main__.py  app.py  extensions.py  helpers.py  models.py  storage.py
src/clipdrop/static/: site.webmanifest  styles.css
src/clipdrop/static/js/: clipboard.js  files.js  modal.js  navigation.js  theme.js  toast.js
src/clipdrop/templates/: base.html  clipboard_view.html  index.html  login.html  macros.html  shared_clipboard.html
src/clipdrop/templates/components/: bottom_nav.html  modal.html  navigation.html  toast.html
src/fileuploader/: __init__.py  __main__.py  app.py  crypto.py
src/fileuploader/templates/: clipboard_view.html
static/: styles.css
templates/: index.html  shared_clipboard.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_routes.py
tests/unit/: __init__.py  test_crypto.py  test_helpers.py
