[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipdrop"
version = "1.0.0"
description = "A Flask-based web application for secure file uploads and clipboard sharing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ClipDrop Team" }
]
keywords = ["flask", "file-upload", "clipboard", "web-application", "clipdrop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "APScheduler>=3.10.0",
    "Flask>=3.0.0",
    "Flask-Dance>=7.0.0",
    "Flask-Login>=0.6.3",
    "Flask-SQLAlchemy>=3.1.1",
    "gunicorn>=22.0.0",
    "psycopg[binary]>=3.1.18",
    "ulid-py>=1.1.0",
    "python-dotenv>=1.0.0",
    "SQLAlchemy>=2.0.0",
    "Werkzeug>=3.0.0",
    "cryptography>=42.0.0",
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
clipdrop = "clipdrop.__main__:main"

[project.urls]
Homepage = "https://github.com/pedroanisio/clipdrop"
Repository = "https://github.com/pedroanisio/clipdrop"
Issues = "https://github.com/pedroanisio/clipdrop/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/clipdrop"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["clipdrop"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
